...
        
        return view
    }()
    
    private lazy var previousLessonBtn: UIButton = {
        let button = UIButton()
        button.setTitle("Previous lesson", for: .normal)
        button.setTitleColor(.tintColor, for: .normal)
        button.setImage(UIImage(systemName: "chevron.left"), for: .normal)
        
        button.addTarget(self, action: #selector(didTapPreviousLesson), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
    private lazy var nextLessonBtn: UIButton = {
        let button = UIButton()
        button.setTitle("Next lesson", for: .normal)
        button.setTitleColor(.tintColor, for: .normal)
        button.setImage(UIImage(systemName: "chevron.right"), for: .normal)
        button.semanticContentAttribute = .forceRightToLeft
        
        button.addTarget(self, action: #selector(didTapNextLesson), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
...
