...
        progressBar.translatesAutoresizingMaskIntoConstraints = false
        return progressBar
    }()
    
    private lazy var cancelLabel: UILabel = {
        let label = UILabel()
        label.accessibilityIdentifier = "Cancel download"
        label.text = "Cancel Download"
        label.textColor = .tintColor
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()
    
...
